app/assets/css/application.css
/* Disagreements with Bootstrap */

@media (min-width: 992px) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 940px;
  }
}

button.close {
    float: none;
    color: white;
    opacity: 1;
    font-weight: 100;
    vertical-align: top;
    font-size: 12px;
}

.modal-content {
    color: #333;
}

button.close:before {
    /* You have to use raw unicode for html entities here, because of course you do. */
    /* This is equivalent to "&nbsp;&times;" = " x" */
    content: "\a0 \D7"; 
}

/* Layout styling: template, header, nav, footer */

html, body {
    height: initial;
    box-shadow: initial;
}

.masthead {
    background: #333;
    border-bottom: 1px solid white;
    z-index: 1;
}

header {
    color: red;
    position: fixed;
    top: 5px;
    right: 5px;
}

.cover-container {
    margin-top: calc(104px + 10px);
}

.search-wrapper {
    margin-bottom: calc(200px + 34px);
}

.account-wrapper {
    position: absolute;
    top: 5px;
    right: 5px;
}

.account-wrapper a {
    color: red;
}

.mode-switch {
    color: red;
}

.mode-switch:hover {
    color: white;
}

input.error {
    border-color: red;
}

.dropdown-menu .nav-header {
    color: #333;
}

/* Modals styling */

.requirements-list {
    text-align: left;
}

.requirements-list a {
    color: darkblue;
}

/* Path styling */

.path-wrapper {
    display: none;
}

.path-wrapper.active {
    display: block;
}

.dl-horizontal dt {
    width: 300px;
}

.dl-horizontal dd {
    text-align: left;
}

.path-row {
    display: inline-block;
    margin-left: 50px;
}

.path-cell {
    border: 1px dashed #fff;
    padding: 0px 5px;
    background: #333;
    white-space: nowrap;
    outline: 1px solid transparent; /* Fixes anti-aliasing bug in chrome */
}

.path-cell, .requirement-name {
    cursor: help;
}

.path-cell.filled {
    border: 1px solid lightblue;
    color: lightblue;
    cursor: move;
}

.path-cell.filled.present {
    border: 1px solid chartreuse;
    color: chartreuse;
}

.path-cell.filled.future {
    border: 1px solid lightsalmon;
    color: lightsalmon;
}

.path-cell.unfilled:before {
    content: attr(data-content);
}

.path-cell.unfilled.fillable {
    color: lightgreen;
    border-color: lightgreen;
}

.path-cell.unfilled:not(.fillable) {
    opacity: 0.8;
}

.path-cell.unfilled.drag-is-active:not(.fillable){
    opacity: 0.4;
}

.extra-cells {
    list-style-type: none;
}

.extra-cells li {
    display: inline-block;
}

.extra-cells-wrapper {
    border: 1px solid #fff;
    padding-top: 20px;
    padding-bottom: 10px;
}

.extra-cells-wrapper.drag-is-active {
    /* lightgreen */
    background: rgba(144,238,144,0.33)
}

/* Calendar styling */

.calendar-cell {
    height: 100px;
}

.calendar-cell-highlight.past {
    /* lightblue */
    background: rgba(173,216,230,0.33)
}

.calendar-cell-highlight.present {
    /* chartreuse */
    background: rgba(127,255,0,0.33)
}

.calendar-cell-highlight.future {
    /* lightsalmon */
    background: rgba(255,160,122,0.33)
}

/* Search box styling */

#course-search {
    width: 100%; /* TODO media query: change width to max-width for responsiveness */
}

.select2-container, .select2-result-label, .department-choice {
    text-shadow: none !important;
}

.select2-choice {
    font-size: 18px !important;
}

.department-choice {
    padding: 6px 8px;
    margin: 3px -5px 3px 5px;
    position: relative;

    line-height: 13px;
    color: #333;
    cursor: default;
    border: 1px solid #aaaaaa;

    border-radius: 3px;

    -webkit-box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
            box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);

    background-clip: padding-box;

    -webkit-touch-callout: none;
      -webkit-user-select: none;
         -moz-user-select: none;
          -ms-user-select: none;
              user-select: none;

    background-color: #e4e4e4;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#f4f4f4', GradientType=0);
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(20%, #f4f4f4), color-stop(50%, #f0f0f0), color-stop(52%, #e8e8e8), color-stop(100%, #eee));
    background-image: -webkit-linear-gradient(top, #f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
    background-image: -moz-linear-gradient(top, #f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
    background-image: linear-gradient(to top, #f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
}

/* End */

